apps/wallos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallos
  namespace: wallos
spec:
  selector:
    app: wallos
  ports:
    - port: 80
      targetPort: 80
